--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 export PATH="$HOME/github.com/moutend/dotfiles/bin:$HOME/go/bin:$PATH"
+export PATH="/usr/local/opt/ruby/bin:$PATH"
 export GPG_TTY="tty"
 export TZ="Asia/Tokyo"
 export LC_ALL="en_US.UTF-8"
