--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,9 @@
-export PATH="$HOME/github.com/moutend/dotfiles/bin:$HOME/go/bin:$PATH"
-export PATH="$HOME/.nodenv/shims:$PATH"
-export PATH="/usr/local/opt/ruby/bin:$PATH"
-export GPG_TTY="tty"
 export TZ="Asia/Tokyo"
 export LC_ALL="en_US.UTF-8"
 export LANG="en_US.UTF-8"
+export PATH="/usr/local/opt/ruby/bin:$PATH"
+export GPG_TTY="tty"
+export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
+export PATH="$HOME/go/bin:$PATH"
+export PATH="/opt/homebrew/bin:$PATH"
+export PATH="$HOME/.nodenv/shims:$PATH"
