--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,7 @@ export TZ="Asia/Tokyo"
 export LC_ALL="en_US.UTF-8"
 export LANG="en_US.UTF-8"
 export PATH="/usr/local/opt/ruby/bin:$PATH"
+export PATH="$HOME/github.com/apple/swift-format/.build/release:$PATH"
 export GPG_TTY="tty"
 export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
 export PATH="$HOME/go/bin:$PATH"
