--- a/.envrc
+++ b/.envrc
@@ -8,3 +8,4 @@ export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
 export PATH="$HOME/go/bin:$PATH"
 export PATH="/opt/homebrew/bin:$PATH"
 export PATH="$HOME/.nodenv/shims:$PATH"
+export PATH="$PATH:/Applications/voicepeak.app/Contents/MacOS"
