--- a/.envrc
+++ b/.envrc
@@ -9,3 +9,5 @@ export PATH="$HOME/go/bin:$PATH"
 export PATH="/opt/homebrew/bin:$PATH"
 export PATH="$HOME/.nodenv/shims:$PATH"
 export PATH="$PATH:/Applications/voicepeak.app/Contents/MacOS"
+export PYENV_ROOT="$HOME/.pyenv"
+export PATH="$PYENV_ROOT/bin:$PATH"
