--- a/.envrc
+++ b/.envrc
@@ -1,13 +1,16 @@
 export TZ="Asia/Tokyo"
 export LC_ALL="en_US.UTF-8"
 export LANG="en_US.UTF-8"
-export PATH="/usr/local/opt/ruby/bin:$PATH"
-export PATH="$HOME/github.com/apple/swift-format/.build/release:$PATH"
 export GPG_TTY="tty"
-export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
-export PATH="$HOME/go/bin:$PATH"
-export PATH="/opt/homebrew/bin:$PATH"
-export PATH="$HOME/.nodenv/shims:$PATH"
-export PATH="$PATH:/Applications/voicepeak.app/Contents/MacOS"
+
 export PYENV_ROOT="$HOME/.pyenv"
 export PATH="$PYENV_ROOT/bin:$PATH"
+
+export PATH="$PATH:/Applications/voicepeak.app/Contents/MacOS"
+export PATH="$PATH:/opt/homebrew/bin"
+export PATH="$PATH:$HOME/github.com/apple/swift-format/.build/release"
+
+export PATH="$HOME/.nodenv/shims:$PATH"
+export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
+export PATH="$HOME/go/bin:$PATH"
+export PATH="$HOME/bin:$PATH"
