--- a/.envrc
+++ b/.envrc
@@ -14,3 +14,4 @@ export PATH="$HOME/.nodenv/shims:$PATH"
 export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
 export PATH="$HOME/go/bin:$PATH"
 export PATH="$HOME/bin:$PATH"
+export PATH="$HOME/.amplify/bin:$PATH"
