--- a/.envrc
+++ b/.envrc
@@ -3,15 +3,10 @@ export LC_ALL="en_US.UTF-8"
 export LANG="en_US.UTF-8"
 export GPG_TTY="tty"
 
-export PYENV_ROOT="$HOME/.pyenv"
-export PATH="$PYENV_ROOT/bin:$PATH"
-
-export PATH="$PATH:/Applications/voicepeak.app/Contents/MacOS"
 export PATH="$PATH:/opt/homebrew/bin"
-export PATH="$PATH:$HOME/github.com/apple/swift-format/.build/release"
-
-export PATH="$HOME/.nodenv/shims:$PATH"
-export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
 export PATH="$HOME/go/bin:$PATH"
 export PATH="$HOME/bin:$PATH"
 export PATH="$HOME/.amplify/bin:$PATH"
+export PATH="$HOME/Anaconda/anaconda3/bin:$PATH"
+export PATH="$HOME/github.com/moutend/dotfiles/bin:$PATH"
+export PATH="$HOME/go/bin:$PATH"
